--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "pay-bill",
+  "version": "1.0.0",
+  "main": "src/server.ts",
+  "scripts": {
+    "start": "node src/server.ts"
+  },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
