--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@types/express": "^4.17.21",
     "@types/stripe": "^8.0.417",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "stripe": "^14.20.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
